[gd_scene load_steps=13 format=2]

[ext_resource path="res://Chaarcteres/Enemigos/Enemigo_torreta/Enemigo_Torreta.gd" type="Script" id=1]
[ext_resource path="res://Art/0x72_16x16RobotTileset.v1.png" type="Texture" id=2]
[ext_resource path="res://Chaarcteres/Enemigos/Enemigo_torreta/AI_torreta.tscn" type="PackedScene" id=3]
[ext_resource path="res://Chaarcteres/Player/Salud.tscn" type="PackedScene" id=4]
[ext_resource path="res://Chaarcteres/Enemigos/Enemigo_basico/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://escenas/Armas y manejo/Laser.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 9 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.55
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 32 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 142, 143, 144 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 32 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 17 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 141 ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=5]
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( 571, 81.6667 )
start_node = "Idle"
graph_offset = Vector2( -154.585, 0 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[node name="Enemigo_Torreta" type="KinematicBody2D" groups=["Enemigos"]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 32
vframes = 17
frame = 141

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 5 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 6 )

[node name="AI_torreta" parent="." instance=ExtResource( 3 )]

[node name="Salud" parent="." instance=ExtResource( 4 )]

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_left = -8.0
margin_top = 10.0
margin_right = 7.0
margin_bottom = 13.0

[node name="tween_modulate" type="Tween" parent="."]

[node name="Laser" parent="." instance=ExtResource( 6 )]
